test/tests/bad/undef-var.carth
;; UndefVar

(defvar undef-var this-var-is-undefined)
